// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`
SELECT
  a
 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "a",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`ALTER TABLE tbl_name ADD COLUMN a int 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`ALTER TABLE tbl_name ADD a int 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`ALTER TABLE tbl_name ADD a int AFTER b 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`ALTER TABLE tbl_name ADD a int FIRST 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`CREATE TABLE "Foo" ( a int ) 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "\\"(\\" expected.",
  "type": undefined,
}
`;

exports[`CREATE TABLE Foo ( a int ) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [
        Object {
          "columnName": "a",
          "columnType": "int",
          "type": "CreateDefinition",
        },
      ],
      "tableName": "Foo",
      "type": "Clause",
    },
  ],
  "type": "Statement",
}
`;

exports[`CREATE TABLE Foo ( a int primary key ) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [
        Object {
          "columnName": "a",
          "columnType": "int",
          "type": "CreateDefinition",
        },
        Object {
          "columnName": "primary",
          "columnType": "key",
          "type": "CreateDefinition",
        },
      ],
      "tableName": "Foo",
      "type": "Clause",
    },
  ],
  "type": "Statement",
}
`;

exports[`CREATE TABLE Foo ( a int, b varchar(255) ) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [
        Object {
          "columnName": "a",
          "columnType": "int",
          "type": "CreateDefinition",
        },
        Object {
          "columnName": "b",
          "columnType": "varchar",
          "type": "CreateDefinition",
        },
      ],
      "tableName": "Foo",
      "type": "Clause",
    },
  ],
  "type": "Statement",
}
`;

exports[`CREATE TABLE Foo ( key (id) ) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [],
      "tableName": "Foo",
      "type": "Clause",
    },
  ],
  "type": "Statement",
}
`;

exports[`CREATE TABLE Foo () 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "CREATE",
      "definitions": Array [],
      "tableName": "Foo",
      "type": "Clause",
    },
  ],
  "type": "Statement",
}
`;

exports[`DROP DATABASE IF EXISTS db_name 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`DROP DATABASE db_name 1`] = `
Object {
  "clauses": Array [],
  "type": "Statement",
}
`;

exports[`SELECT "1", '1', \`1\` 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "LiteralToken",
          "value": "1",
        },
        Object {
          "type": "LiteralToken",
          "value": "1",
        },
        Object {
          "type": "LiteralToken",
          "value": "1",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT (a) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [
            "a",
          ],
          "callee": undefined,
          "type": "CallExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM (SELECT * FROM foo) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        Object {
          "arguments": Array [],
          "callee": undefined,
          "type": "CallExpression",
        },
      ],
    },
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "foo",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM foo 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "foo",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM foo GROUP BY a HAVING b=5 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "foo",
      ],
    },
    Object {
      "clauseName": "GROUP BY",
      "expressions": Array [
        "a",
      ],
    },
    Object {
      "clauseName": "HAVING",
      "expressions": Array [
        Object {
          "left": "b",
          "operator": "=",
          "right": "5",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM foo LEFT JOIN goo ON foo.a = goo.a 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "foo",
      ],
    },
    Object {
      "clauseName": "LEFT JOIN",
      "expressions": Array [
        "goo",
      ],
    },
    Object {
      "clauseName": "ON",
      "expressions": Array [
        Object {
          "left": Object {
            "left": "foo",
            "operator": ".",
            "right": "a",
          },
          "operator": "=",
          "right": Object {
            "left": "goo",
            "operator": ".",
            "right": "a",
          },
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM foo WHERE a = (SELECT max(b) FROM foo) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "foo",
      ],
    },
    Object {
      "clauseName": "WHERE",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "=",
          "right": Object {
            "arguments": Array [],
            "callee": undefined,
            "type": "CallExpression",
          },
        },
      ],
    },
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [
            "b",
          ],
          "callee": "max",
          "type": "CallExpression",
        },
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "foo",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM foo WHERE a = (SELECT max(b) FROM foo) 2`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "foo",
      ],
    },
    Object {
      "clauseName": "WHERE",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "=",
          "right": Object {
            "arguments": Array [],
            "callee": undefined,
            "type": "CallExpression",
          },
        },
      ],
    },
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [
            "b",
          ],
          "callee": "max",
          "type": "CallExpression",
        },
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "foo",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT * FROM foo f LEFT JOIN goo g ON f.a = g.a 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "type": "WildcardExpression",
        },
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        Object {
          "isExplicit": false,
          "left": "foo",
          "right": "f",
          "type": "AliasExpression",
        },
      ],
    },
    Object {
      "clauseName": "LEFT JOIN",
      "expressions": Array [
        Object {
          "isExplicit": false,
          "left": "goo",
          "right": "g",
          "type": "AliasExpression",
        },
      ],
    },
    Object {
      "clauseName": "ON",
      "expressions": Array [
        Object {
          "left": Object {
            "left": "f",
            "operator": ".",
            "right": "a",
          },
          "operator": "=",
          "right": Object {
            "left": "g",
            "operator": ".",
            "right": "a",
          },
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT 1; SELECT 2; 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "1",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT 2 * (a % b) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "2",
          "operator": "*",
          "right": Object {
            "arguments": Array [
              Object {
                "left": "a",
                "operator": "%",
                "right": "b",
              },
            ],
            "callee": undefined,
            "type": "CallExpression",
          },
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a "aa" 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "a",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a + b * c / d 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": Object {
            "left": "a",
            "operator": "+",
            "right": Object {
              "left": "b",
              "operator": "*",
              "right": "c",
            },
          },
          "operator": "/",
          "right": "d",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a + b - c 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "+",
          "right": Object {
            "left": "b",
            "operator": "-",
            "right": "c",
          },
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a + b 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "+",
          "right": "b",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a FROM A.B 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "a",
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        Object {
          "left": "A",
          "operator": ".",
          "right": "B",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a FROM b WHERE m = 6; 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "a",
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "b",
      ],
    },
    Object {
      "clauseName": "WHERE",
      "expressions": Array [
        Object {
          "left": "m",
          "operator": "=",
          "right": "6",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a aa 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "isExplicit": false,
          "left": "a",
          "right": "aa",
          "type": "AliasExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a as aa 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "isExplicit": true,
          "left": "a",
          "right": "aa",
          "type": "AliasExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a b c d e 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "Expecting a clause.",
  "type": undefined,
}
`;

exports[`SELECT a, b, 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "a",
        "b",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a."select" FROM foo 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": ".",
          "right": Object {
            "type": "LiteralToken",
            "value": "select",
          },
        },
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "foo",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT a.* FROM foo 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": ".",
          "right": Object {
            "type": "WildcardExpression",
          },
        },
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "foo",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT by FROM foo; 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [],
    },
    Object {
      "clauseName": "by",
      "expressions": Array [],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "foo",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT f(g(a)) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [
            Object {
              "arguments": Array [
                "a",
              ],
              "callee": "g",
              "type": "CallExpression",
            },
          ],
          "callee": "f",
          "type": "CallExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT fn(), fn(a), fn(a, b) 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        Object {
          "arguments": Array [],
          "callee": "fn",
          "type": "CallExpression",
        },
        Object {
          "arguments": Array [
            "a",
          ],
          "callee": "fn",
          "type": "CallExpression",
        },
        Object {
          "arguments": Array [
            "a",
            "b",
          ],
          "callee": "fn",
          "type": "CallExpression",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT not FROM a 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "not",
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "a",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT null, true, current_timestamp FROM a 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "null",
        "true",
        "current_timestamp",
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "a",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`SELECT varchar FROM a 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "SELECT",
      "expressions": Array [
        "varchar",
      ],
    },
    Object {
      "clauseName": "FROM",
      "expressions": Array [
        "a",
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`UPDATE Foo SET a = 5 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "UPDATE",
      "expressions": Array [
        "Foo",
      ],
    },
    Object {
      "clauseName": "SET",
      "expressions": Array [
        Object {
          "left": "a",
          "operator": "=",
          "right": "5",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;

exports[`UPDATE Foo SET f(a) = 5 1`] = `
Object {
  "clauses": Array [
    Object {
      "clauseName": "UPDATE",
      "expressions": Array [
        "Foo",
      ],
    },
    Object {
      "clauseName": "SET",
      "expressions": Array [
        Object {
          "left": Object {
            "arguments": Array [
              "a",
            ],
            "callee": "f",
            "type": "CallExpression",
          },
          "operator": "=",
          "right": "5",
        },
      ],
    },
  ],
  "type": "Statement",
}
`;
